@@ -154,7 +154,7 @@ class Chord : public ChordRest {
 
       void write(Xml& xml, int start, int end) const;
       virtual void write(Xml& xml) const { write(xml, 0, 0); }
-      void read(QDomElement, const QList<Tuplet*>&);
+      void read(QDomElement, QList<Tuplet*>&, Measure*);
       virtual void read(QDomElement);
       virtual void setSelected(bool f);
       virtual void dump() const;
@@ -196,7 +196,7 @@ class Chord : public ChordRest {
       virtual int upLine() const;
       virtual int downLine() const;
       virtual Space space() const;
-      void readNote(QDomElement node, const QList<Tuplet*>&);
+      void readNote(QDomElement node, QList<Tuplet*>&, Measure*);
 
       NoteType noteType() const         { return _noteType; }
       void setNoteType(NoteType t)      { _noteType = t; }
