@@ -65,9 +65,9 @@ class ChordRest : public DurationElement {
       Segment* segment() const                   { return (Segment*)parent(); }
       virtual Measure* measure() const           { return (Measure*)(parent()->parent()); }
 
-      virtual void read(QDomElement, const QList<Tuplet*>&) = 0;
+      virtual void read(QDomElement, QList<Tuplet*>&, Measure*) = 0;
       void writeProperties(Xml& xml) const;
-      bool readProperties(QDomElement e, const QList<Tuplet*>&);
+      bool readProperties(QDomElement e, QList<Tuplet*>&, Measure*);
       QList<Prop> properties(Xml&, bool clipboardmode) const;
       virtual QList<Prop> properties(Xml& xml) const { return properties(xml, false); }
       virtual void scanElements(void* data, void (*func)(void*, Element*));
